--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@
 *.app
 
 # VS2019 files
+.vs
 *.sln
 *.vcxproj
 *.vcxproj.filters
@@ -41,3 +42,5 @@
 DeltaEngine
 x64
 examples
+doxygen
+package-v.0.9
